# stock-monitor

./: .gitignore  Ashare.py  Dockerfile  app.py  job.py  mail_tools.py  main.py  notification_tools.py  pid.txt  pyproject.toml  requirements.txt  run.sh  run_fg.sh  run_fg_direct.sh  run_v2.sh  utils.py  worker_thread.py
.github/workflows/: stock-monitor.yaml
