[tool.poetry]
name = "stock-monitor"
version = "0.1.0"
description = ""
authors = ["Wang Xu <350821495@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chinesecalendar = "==1.9.0"
requests = "==2.28.1"
schedule = "==1.2.1"
Flask = "==2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
